# squeezelite-esp32

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  bt_app_core.h  component.mk  decode.c  esp32.c  esp_app_main.c  output.c  output_bt.c  output_dac.c  output_dac.c.nocompile  partitions.csv  scan.c  sdkconfig  sdkconfig.default  sdkconfig.defaults  squeezelite.h  stream.c
build-scripts/: squeezelite-esp32-16M-sdkconfig.defaults  squeezelite-esp32-I2S-16MFlash-sdkconfig.defaults  squeezelite-esp32-I2S-4MFlash-NOAirplay-sdkconfig.defaults  squeezelite-esp32-I2S-4MFlash-sdkconfig.defaults  squeezelite-esp32-SqueezeAmp-sdkconfig.defaults
components/airplay/: airplay_sink.c  airplay_sink.h  component.mk
components/cmd_i2c/: CMakeLists.txt  cmd_i2ctools.c  component.mk
components/wifi-manager/: CMakeLists.txt  Kconfig.projbuild  code.js  component.mk  dns_server.c  dns_server.h  http_server.c  http_server.h  index.html  json.c  json.h  main.c.txt  style.css  wifi_manager.c  wifi_manager.h
idf-patch/: i2s.c
main/: CMakeLists.txt  Kconfig.projbuild  Params.txt  alac.c  bt_app_core.c  cmd_decl.h  cmd_squeezelite.c  cmd_wifi.c  cmd_wifi.h  component.mk  console.c  console.h  decode.c  embedded.c  embedded.h  esp32.c  esp_app_main.c  faad.c  faad.c.nocompile  flac.c  helix-aac.c  mad.c  main.c  mpg.c  nvs_utilities.c  nvs_utilities.h  output.c  output_bt.c  output_dac.c  output_dac.c.sample  output_dac.c.tes  output_embedded.c  output_i2s.c  output_pack.c  pcm.c  perf_trace.c  perf_trace.h  platform_esp32.h  process.c  resample.c  (+7 more)
(+73 files in other folders)
